# OpenCourses

./: .gitignore
Dartmouth/CS 60/code/client/: app_stress_client.c  srt_client.h
Dartmouth/CS 60/code/common/: chan.c  chan.h  event.c  seg.c  seg.h
Dartmouth/CS 60/code/server/: srt_server.c
Dartmouth/CS 60/handout/lab4handout/: Makefile
Dartmouth/CS 60/handout/lab5handout/: Makefile  README
Dartmouth/CS 60/handout/lab6handout/: Makefile  README
Dartmouth/CS 60/handout/lab7handout/: Makefile  Readme
Dartmouth/CS60/: README.md
Dartmouth/CS60/code/: Makefile
Dartmouth/CS60/code/client/: app_client.c  app_simple_client.c  app_stress_client.c  srt_client.c  srt_client.h
Dartmouth/CS60/code/common/: constants.h  event.c  event.h  seg.c  seg.h  util.c  util.h
Dartmouth/CS60/code/server/: app_server.c  app_simple_server.c  app_stress_server.c  srt_server.c  srt_server.h
Dartmouth/CS60/handout/lab5handout/: send_this_text.txt
Dartmouth/CS60/handout/lab7handout/: Readme~
Harvard/CS 207/: Graph.hpp  Mesh.hpp
Harvard/CS 207/CS207/: Color.hpp  GLCamera.hpp  Point.hpp  SDLViewer.hpp
Harvard/CS 207/data/: dam0.nodes  dam0.tris  dam3.tris  dam4.nodes  pond3.nodes  pond3.tris  pond4.tris  tub2.nodes  tub2.tris  tub3.tris  tub4.tris
Harvard/CS207/: Makefile  README.md  shallow_water.cpp
Harvard/CS207/CS207/: Util.hpp
Harvard/CS207/data/: dam3.nodes  dam4.tris  pond4.nodes  tub3.nodes  tub4.nodes
Harvard/Stats 221/pset2/: rASL.R  weights.txt  ykuang_ps2_task4_post.R  ykuang_ps2_task5.R  ykuang_ps2_task5_post.R
Harvard/Stats 221/pset3/: glmnet.R  sgdpset3.R  ykuang_ps3_task2_part1_post.R  ykuang_ps3_task2_part1_util.R  ykuang_ps3_task2_part2.R  ykuang_ps3_task2_part2_post.R  ykuang_ps3_task2_part3.R  ykuang_ps3_task2_util.R  ykuang_ps3_task3_part4.R
Harvard/Stats 221/pset4/: mcmc_convergence.R  ps4_util.R  yk_N_theta_2_util.R  yk_N_theta_util.R  yk_mcmc.R  yk_ps4_part4.R  yk_ps4_part5.R  yk_ps4_part6.R
Harvard/Stats 221/pset4/data/: readme.txt  waterbuck.txt
Harvard/Stats 221/pset5/: pset5_task_1-2.R  ykuang_1router.R  ykuang_1router.slurm
Harvard/Stats221/: README.md
Harvard/Stats221/pset2/: poissonLogN_MCMC.R  task3-batch.slurm  task4-batch.slurm  task5-batch.slurm  ykuang_ps2_functions.R  ykuang_ps2_task3.R  ykuang_ps2_task3_post.R  ykuang_ps2_task4.R
Harvard/Stats221/pset3/: task2-part1-bat.slurm  task2-part2-bat.slurm  task2-part2-batch.slurm  task2-part3-bat.slurm  task3-part4-bat.slurm  ykuang_ps3_task2_part1.R  ykuang_ps3_task2_part2_util.R  ykuang_ps3_task2_part3_post.R  ykuang_ps3_task3_part1.R
Harvard/Stats221/pset4/: panos_mcmc.R  task4-bat.slurm  yk_S_theta_util.R  yk_lambda_theta_util.R
Harvard/Stats221/pset4/data/: impala.txt
Harvard/Stats221/pset5/: ykuang_1router_post.R  ykuang_functions.R
MIT/6.824/: Makefile  README.md
MIT/6.824/src/diskv/: client.go  common.go  server.go  test_test.go
MIT/6.824/src/kvpaxos/: Lab 3B  Summary.md  client.go  common.go  server.go  test_test.go
MIT/6.824/src/lockservice/: client.go
MIT/6.824/src/main/: diskvd.go  mr-testout.txt  test-wc.sh  wc.go
MIT/6.824/src/mapreduce/: mapreduce.go  master.go  test_test.go
MIT/6.824/src/paxos/: run.sh  (+3 more)
MIT/6.828/: .gitignore  GNUmakefile  README.md  handin-prep
MIT/6.828/conf/: lab.mk
MIT/6.828/fs/: bc.c
MIT/6.828/inc/: error.h
MIT/6.828/kern/: env.c  init.c  kdebug.c  monitor.c  pmap.c  sched.c  syscall.c  trap.c  trapentry.S
MIT/6.828/lib/: fork.c  ipc.c  libmain.c  pfentry.S  pgfault.c  printfmt.c  spawn.c  syscall.c
MIT/6.828/user/: sendpage.c
MIT/6.830/: README.md
MIT/6.837/: README.md
MIT/6.837/0/: Makefile  README.md  a0.make  out.txt  premake4.lua
MIT/6.837/1/: CMakeLists.txt
MIT/6.837/1/src/: CMakeLists.txt  Makefile  camera.cpp  camera.h  curve.cpp  curve.h  extra.h  main.cpp  parse.cpp  surf.cpp  surf.h
MIT/6.837/1/vecmath/: Matrix3f.cpp  Matrix4f.cpp
MIT/6.837/1/vecmath/include/: Vector3f.h
MIT/6.837/2/: CMakeLists.txt  README.txt  a2
MIT/6.837/2/data/: Model1.attach  Model1.skel  Model2.attach  Model2.skel  Model3.attach  Model3.skel  Model4.attach  Model4.skel
MIT/6.837/2/sample_solution/: a2soln  a2soln_mac
MIT/6.837/2/src/: CMakeLists.txt  Joint.cpp  Joint.h  MatrixStack.cpp  MatrixStack.h  Mesh.cpp  Mesh.h  ModelerView.cpp  ModelerView.h  SkeletalModel.cpp  SkeletalModel.h  bitmap.cpp  bitmap.h  camera.cpp  camera.h  cpp.txt  extra.h  h.txt  main.cpp  modelerapp.cpp  modelerapp.h  modelerui.cpp  modelerui.h
MIT/6.837/2/vecmath/: CMakeLists.txt
MIT/6.837/2/vecmath/include/: Matrix4f.h
MIT/6.837/2/vecmath/src/: Matrix4f.cpp
MIT/6.837/3/: CMakeLists.txt  README.txt  a3_athena
MIT/6.837/3/lib/: RK4.lib  RK4D.lib
MIT/6.837/3/sample_solution/: a3soln  a3soln_mac
MIT/6.837/3/src/: CMakeLists.txt  ClothSystem.cpp  ClothSystem.h  Constraint.cpp  Constraint.h  TimeStepper.cpp  TimeStepper.h  camera.cpp  main.cpp  particleSystem.cpp  particleSystem.h  pendulumSystem.cpp  pendulumSystem.h  simpleSystem.cpp  simpleSystem.h
MIT/6.837/3/vecmath/include/: Vector3f.h
MIT/6.837/4/: CMakeLists.txt  a4_athena
MIT/6.837/4/src/: CMakeLists.txt  Group.h  Light.h  Material.h  Mesh.cpp  Mesh.h  Ray.h  Renderer.cpp  Renderer.h  SceneParser.cpp  SceneParser.h  Transform.h  Triangle.h  main.cpp
MIT/6.837/5/: CMakeLists.txt  a4_athena
Stanford/CS143/: README.md
Stanford/CS143/PA2/: README  cool.flex
Stanford/CS143/PA3/: README  cool-tree.aps  cool-tree.h  cool-tree.handcode.h  cool.tab.h  cool.y
Stanford/CS143/PA4/: README  cool-tree.h  cool-tree.handcode.h  semant.cc  semant.h
Stanford/CS143/PA5/: README  ar_notes.h  cgen.cc  cgen.h  cool-tree.h  cool-tree.handcode.h  emit.h
Stanford/CS224n/: README.md
Stanford/CS224n/a2/: sgd.py  word2vec.py
Stanford/CS224n/a3/: env.yml  parser_model.py  parser_transitions.py  run.py
Stanford/CS224n/a4/: local_env.yml  model_embeddings.py  nmt_model.py  run.py  sanity_check.py  utils.py
Stanford/CS224n/a5/: char_decoder.py  cnn.py  env.yml  highway.py  keng.md  model_embeddings.py  nmt_model.py  run.py  run.sh  sanity_check.py  utils.py  vocab.py
(+150 files in other folders)
